--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -9,6 +9,7 @@
 			<em>
 				<a href="{{ '/' | url }}">{{ metadata.title }}</a>
 			</em>
+			<small>Therapist and licensed clinical social worker</small>
 			{% include "components/nav.njk" %}
 		</header>
 
