--- a/_includes/components/footer.njk
+++ b/_includes/components/footer.njk
@@ -1,6 +1,45 @@
 <footer>
-  <small>
-    This project is maintained by <a href="https://www.danurbanowicz.com">Dan Urbanowicz</a>.
-    Check out the <a href="{{ pkg.repository.url }}">GitHub repo</a>.
-  </small>
+  <address>829 S. Oak Park Ave<br>Suite 208<br>Oak Park, IL 60304</address>
+  <p>Find me on:</p>
+  <ul>
+  	<li><a href="https://www.psychologytoday.com/us/therapists/laura-anderson-oak-park-il/149471">Psychology Today</a></li>
+  	<li><a href="https://www.facebook.com/LauraAndersonLCSW">Facebook</a></li>
+  </ul>
+  <p>Recent posts:</p>
+<section>
+	{% for post in postslist | reverse %}
+		<article{% if post.url == url %} data-current="current item"{% endif %}>
+			<h3>
+				<a href="{{ post.url | url }}">
+					{% if post.data.title %}
+						{{ post.data.title }}
+					{% else %}
+						Untitled
+					{% endif %}
+				</a>
+			</h3>
+			{% if post.data.summary %}
+				<p>
+					{{ post.data.summary }}
+				</p>
+			{% endif %}
+			<p>
+				<time datetime="{{ post.date | machineDate }}">
+					<small>{{ post.date | readableDate }} by <a href="/authors/{{ post.data.author | slug }}/">{{ post.data.author }}</a></small>
+				</time>
+			</p>
+			{% if post.data.tags %}
+				<p>
+					{% for tag in post.data.tags %}
+		  			{%- if tag != "post" -%}
+		  				{% set tagUrl %}/tags/{{ tag }}/{% endset %}
+		  			<a href="{{ tagUrl | url }}" rel="tag">{{ tag }}</a>
+		  			{%- endif -%}
+					{% endfor %}
+				</p>
+			{% endif %}
+		</article>
+	{% endfor %}
+</section>
+
 </footer>
